<resources>
    <string name="app_name">JamesCollins-HW1-TipCalculator</string>

    <string name="app_title">Tip Calculator!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt1">Please Enter You Bill Total:</string>
    <string name="percent15">15%</string>
    <string name="percent18">18%</string>
    <string name="percent20">20%</string>
    <string name="taxAmount"> </string>
    <string name="finalAmount"> </string>
    <string name="calculate">Calculate!</string>

</resources>
