<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt1"
        android:id="@+id/prompt1"
        android:layout_below="@+id/app_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billTotal"
        android:layout_below="@+id/prompt1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billTotal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/billTotal"
        android:layout_alignEnd="@+id/billTotal"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioGroupButton0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent15"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/radioGroupButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent18"
            android:textSize="18dp"
            android:layout_marginTop="15dp"/>

        <RadioButton
            android:id="@+id/radioGroupButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent20"
            android:textSize="18dp"
            android:layout_marginTop="15dp"/>


    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/calculateButton"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxAmount"
        android:id="@+id/taxDisplay"
        android:layout_below="@+id/calculateButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalAmount"
        android:id="@+id/finalAmount"
        android:layout_below="@+id/taxDisplay"
        android:layout_toRightOf="@+id/taxDisplay"
        android:layout_toEndOf="@+id/taxDisplay" />

</RelativeLayout>
